2012-04-25  Jakub Jelinek  <jakub@redhat.com>

	PR c/52880
	* gcc.dg/pr52880.c: New test.

2012-04-24  Georg-Johann Lay  <avr@gjlay.de>

	PR testsuite/52641
	PR tree-optimizations/52891

	* gcc.c-torture/compile/pr52891-2.c: Fix test for 16-bit int.

2012-04-24  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/53085
	* g++.dg/torture/pr53085.C: New testcase.

2012-04-23  Richard Guenther  <rguenther@suse.de>

	PR c/53060
	* gcc.dg/pr53060.c: New testcase.

2012-04-23  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimizations/52891
	* gcc.c-torture/compile/pr52891-1.c: New test.	
	* gcc.c-torture/compile/pr52891-2.c: New test.

2012-04-20  Ian Lance Taylor  <iant@google.com>

	* go.test/go-test.exp (go-set-goarch): Recognize powerpc*-*-*.
	(go-gc-tests): Skip nilptr.go on powerpc*-*-*.

2012-04-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/53003
	* g++.dg/parse/crash59.C: New.

2012-04-16  Jason Merrill  <jason@redhat.com>

	PR c++/38543
	* g++.dg/cpp0x/variadic131.C: New.

2012-04-16  Jason Merrill  <jason@redhat.com>

	PR c++/50830
	* g++.dg/cpp0x/variadic129.C: New.

	PR c++/50303
	* g++.dg/cpp0x/variadic128.C: New.

2012-04-16  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2012-04-12  Uros Bizjak  <ubizjak@gmail.com>

	PR target/52932
	* gcc.target/i386/avx2-vpermps-1.c (avx2_test): Use __m256i type for
	second function argument.
	* gcc.target/i386/avx2-vpermps-2.c (init_permps): Update declaration.
	(calc_permps): Update declaration.  Calculate result correctly.
	(avx2_test): Change src2 type to union256i_d.
	* gcc.target/i386/avx2-vpermd-2.c (calc_permd): Calculate result
	correctly.

2012-04-16  Martin Jambor  <mjambor@suse.cz>

	Backported from mainline

	2012-04-13  Martin Jambor  <mjambor@suse.cz>
	PR middle-end/52939

	* g++.dg/ipa/pr52939.C: New test.

2012-04-15  Jason Merrill  <jason@redhat.com>

	PR c++/52380
	* g++.dg/cpp0x/variadic125.C: New.

	PR c++/52292
	* g++.dg/cpp0x/variadic124.C: New.
